# track-vision-sensor-py-on-ubuntu

./: .env.example  .gitignore  CLAUDE.md  README.md  README_AUTO_RESTART.md  __init__.py  gesture_manager.py  gesture_recognizer.py  main.py  pyproject.toml  rpicam_video.py  rpicamera.py  run_editor.sh  run_tracker.sh  test_camera.py  test_camera_simple.py  test_font_display.py  test_gui_only.py  test_hand_tracking.py  test_libcamera.py  test_pillow_font.py  test_rpicam_mediapipe.py  tracker.service
